# property-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  code-standards.md  config.py  docker-compose.yml  git-standards.md  pyproject.toml  release-standards.md
api/: Dockerfile  app.py  requirements.txt  utils.py
api/specification/: API-Specification.html  property-scrapper-API-specification.yaml
machine_learning/: data_analysis.ipynb
property-scraper/src/: extract.py  scraper.py
property_scraper/: .coverage  .gitignore  config.py  data.csv  property_scraper.py  prueba.csv
property_scraper/data/: data.csv
property_scraper/notebooks/: db_integration.ipynb
property_scraper/src/: browser.py  extract.py  property.py  propertyData.py  propertyParser.py  provider.py  providerFactory.py  provieder.py  scraper.py
property_scraper/src/providers/: provider.py  zonaprop.py
property_scraper/src/provieders/: provider.py  zonaprop.py
property_scraper/tests/: test_browser.py  test_logging.py  test_propertyParser.py  test_providerFactory.py  test_scraper.py  test_zonapropProvider.py  test_zonapropScraper.py
property_scraper/tests/fixtures/: zonapropDescriptionFixture.html  zonapropExpectedData.py  zonapropExpectedLogs.py  zonapropFixture.html  zonapropFixture_3.html  zonapropFixture_4.html  zonapropFixture_Description.html  zonapropFixture_realStateAgency.html  zonapropFixture_realStateAgent.html  zonapropFixture_reserved.html
scraper/src/: property.py
